<?xml version="1.0" encoding="utf-8"?>
<ViewFlipper xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/viewf"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent">

                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="10dp"
                    android:src="@drawable/logo" />
            </LinearLayout>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/usuario" />

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/contraseña"
                    android:inputType="textPassword" />

                <Button
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:onClick="onClickEntrar"
                    android:text="@string/Entrar"
                    android:textColor="@color/colorAccent" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:orientation="horizontal">

                <Button
                    style="@style/Widget.AppCompat.Button.Small"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:text="@string/registrarsecomousuario"
                    android:onClick="onClickBtnRegisUsuario"
                    android:textColor="@color/colorAccent" />

                <Button
                    style="@style/Widget.AppCompat.Button.Small"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:text="@string/regisempresa"
                    android:textColor="@color/colorAccent" />
            </LinearLayout>

        </LinearLayout>
    </ScrollView>


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/nombreusuario" />

            <EditText
                android:id="@+id/regisusername"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="panaMiguel88"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/contraseña" />

            <EditText
                android:id="@+id/regiscontraseña"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword"/>
<!--
            <TextView
                android:id="@+id/tvdate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/FechaNacimiento" />

            <Button
                android:id="@+id/fechaRegis"
                android:hint="@string/FechaNacimiento"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="date"
                android:onClick="onClickFecharegistro"
                android:focusable="false"
                android:clickable="true"
                android:maxLines="1" />
-->
            <EditText
                android:id="@+id/fechaRegis"
                android:hint="@string/FechaNacimiento"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="date"
                android:onClick="onClickFechanacregistro"
                android:focusable="false"
                android:clickable="true"
                android:maxLines="1" />


            <Button
                android:id="@+id/registrar"
                android:onClick="onClickSignInUsuario"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="registrarse">

            </Button>
        </LinearLayout>
    </ScrollView>
</ViewFlipper>